Correct number of visible/approved comments, improve approval of comments for multiple comments, info for unapproved comments

--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -220,6 +220,10 @@ h6 {
   width: 40%;
 }
 
+.count-not-approved-comments {
+  color: grey;
+}
+
 .comments a {
   margin-left: 20px;
 }
